--- a/src/Library.Test/Library.Test.csproj
+++ b/src/Library.Test/Library.Test.csproj
@@ -53,6 +53,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="AnyTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SameTests.cs" />
   </ItemGroup>
