Resolve #4: Enable matching an instance to be greater than another instance

--- a/src/Library.Test/Library.Test.csproj
+++ b/src/Library.Test/Library.Test.csproj
@@ -55,6 +55,7 @@
   <ItemGroup>
     <Compile Include="AnyTests.cs" />
     <Compile Include="EqualTests.cs" />
+    <Compile Include="GreaterThanTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SameTests.cs" />
   </ItemGroup>
