--- a/src/Library.Test/Library.Test.csproj
+++ b/src/Library.Test/Library.Test.csproj
@@ -56,6 +56,7 @@
     <Compile Include="AnyTests.cs" />
     <Compile Include="EqualTests.cs" />
     <Compile Include="GreaterThanTests.cs" />
+    <Compile Include="LessThanTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SameTests.cs" />
   </ItemGroup>
