--- a/src/Library.Test/Library.Test.csproj
+++ b/src/Library.Test/Library.Test.csproj
@@ -57,6 +57,7 @@
     <Compile Include="EqualTests.cs" />
     <Compile Include="GreaterThanTests.cs" />
     <Compile Include="LessThanTests.cs" />
+    <Compile Include="NullTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SameTests.cs" />
   </ItemGroup>
