Resolve #8: Enable matching never

--- a/src/Library.Test/Library.Test.csproj
+++ b/src/Library.Test/Library.Test.csproj
@@ -58,6 +58,7 @@
     <Compile Include="EqualTests.cs" />
     <Compile Include="GreaterThanTests.cs" />
     <Compile Include="LessThanTests.cs" />
+    <Compile Include="NeverTests.cs" />
     <Compile Include="NullTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SameTests.cs" />
