--- a/src/Library.Test/Library.Test.csproj
+++ b/src/Library.Test/Library.Test.csproj
@@ -56,6 +56,7 @@
     <Compile Include="AlwaysTests.cs" />
     <Compile Include="AnyTests.cs" />
     <Compile Include="EqualTests.cs" />
+    <Compile Include="GreaterThanOrEqualToTests.cs" />
     <Compile Include="GreaterThanTests.cs" />
     <Compile Include="LessThanTests.cs" />
     <Compile Include="NeverTests.cs" />
