--- a/src/Library.Test/Library.Test.csproj
+++ b/src/Library.Test/Library.Test.csproj
@@ -53,6 +53,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="AllTests.cs" />
     <Compile Include="AlwaysTests.cs" />
     <Compile Include="AnyTests.cs" />
     <Compile Include="EqualTests.cs" />
