Resolve #15: Enable match that determines whether an instance does not equal a given instance

--- a/src/Library.Test/Library.Test.csproj
+++ b/src/Library.Test/Library.Test.csproj
@@ -62,6 +62,7 @@
     <Compile Include="LessThanOrEqualToTests.cs" />
     <Compile Include="LessThanTests.cs" />
     <Compile Include="NeverTests.cs" />
+    <Compile Include="NotEqualTests.cs" />
     <Compile Include="NotNullTests.cs" />
     <Compile Include="NotSameTests.cs" />
     <Compile Include="NullTests.cs" />
