Improve tests to ensure that value to match is passed to each single match

--- a/src/Library.Net46.Test/Library.Net46.Test.csproj
+++ b/src/Library.Net46.Test/Library.Net46.Test.csproj
@@ -68,6 +68,9 @@
     <Compile Include="..\Library.Test\LessThanTests.cs">
       <Link>LessThanTests.cs</Link>
     </Compile>
+    <Compile Include="..\Library.Test\MatchStub.cs">
+      <Link>MatchStub.cs</Link>
+    </Compile>
     <Compile Include="..\Library.Test\NeverTests.cs">
       <Link>NeverTests.cs</Link>
     </Compile>
