--- a/src/Library.Test/Library.Test.csproj
+++ b/src/Library.Test/Library.Test.csproj
@@ -63,6 +63,7 @@
     <Compile Include="GreaterThanTests.cs" />
     <Compile Include="LessThanOrEqualToTests.cs" />
     <Compile Include="LessThanTests.cs" />
+    <Compile Include="MatchStub.cs" />
     <Compile Include="NeverTests.cs" />
     <Compile Include="NoneTests.cs" />
     <Compile Include="NotEqualTests.cs" />
