--- a/src/Library.Net451.Test/Library.Net451.Test.csproj
+++ b/src/Library.Net451.Test/Library.Net451.Test.csproj
@@ -53,6 +53,9 @@
     <Compile Include="..\Library.Test\CustomTests.cs">
       <Link>CustomTests.cs</Link>
     </Compile>
+    <Compile Include="..\Library.Test\EqualityTest.cs">
+      <Link>EqualityTest.cs</Link>
+    </Compile>
     <Compile Include="..\Library.Test\EqualTests.cs">
       <Link>EqualTests.cs</Link>
     </Compile>
@@ -70,6 +73,9 @@
     </Compile>
     <Compile Include="..\Library.Test\LessThanTests.cs">
       <Link>LessThanTests.cs</Link>
+    </Compile>
+    <Compile Include="..\Library.Test\MatchDummy.cs">
+      <Link>MatchDummy.cs</Link>
     </Compile>
     <Compile Include="..\Library.Test\MatchStub.cs">
       <Link>MatchStub.cs</Link>
