--- a/src/Library.Net40.Test/Library.Net40.Test.csproj
+++ b/src/Library.Net40.Test/Library.Net40.Test.csproj
@@ -62,6 +62,9 @@
     <Compile Include="..\Library.Test\CustomTests.cs">
       <Link>CustomTests.cs</Link>
     </Compile>
+    <Compile Include="..\Library.Test\EqualityTest.cs">
+      <Link>EqualityTest.cs</Link>
+    </Compile>
     <Compile Include="..\Library.Test\EqualTests.cs">
       <Link>EqualTests.cs</Link>
     </Compile>
@@ -79,6 +82,9 @@
     </Compile>
     <Compile Include="..\Library.Test\LessThanTests.cs">
       <Link>LessThanTests.cs</Link>
+    </Compile>
+    <Compile Include="..\Library.Test\MatchDummy.cs">
+      <Link>MatchDummy.cs</Link>
     </Compile>
     <Compile Include="..\Library.Test\MatchStub.cs">
       <Link>MatchStub.cs</Link>
