--- a/src/Library.Test/Library.Test.csproj
+++ b/src/Library.Test/Library.Test.csproj
@@ -57,12 +57,14 @@
     <Compile Include="AlwaysTests.cs" />
     <Compile Include="AnyTests.cs" />
     <Compile Include="CustomTests.cs" />
+    <Compile Include="EqualityTest.cs" />
     <Compile Include="EqualTests.cs" />
     <Compile Include="ExceptTests.cs" />
     <Compile Include="GreaterThanOrEqualToTests.cs" />
     <Compile Include="GreaterThanTests.cs" />
     <Compile Include="LessThanOrEqualToTests.cs" />
     <Compile Include="LessThanTests.cs" />
+    <Compile Include="MatchDummy.cs" />
     <Compile Include="MatchStub.cs" />
     <Compile Include="NeverTests.cs" />
     <Compile Include="NoneTests.cs" />
