--- a/src/Global.targets
+++ b/src/Global.targets
@@ -3,6 +3,8 @@
 	<PropertyGroup>
 		<TargetFramework>net5.0</TargetFramework>
 		<RootNamespace>Delizious.Filtering</RootNamespace>
+		<AssemblyVersion>2.1.0.0</AssemblyVersion>
+		<FileVersion>2.1.0.0</FileVersion>
 		<Version>2.1.0</Version>
 		<Authors>Oliver Zick</Authors>
 		<Copyright>Copyright (c) 2016-2017 Oliver Zick. All rights reserved.</Copyright>
